--- a/source/sass/modules/_pages.scss
+++ b/source/sass/modules/_pages.scss
@@ -19,6 +19,7 @@
     }
 
     .instagram {
+        max-width: 640px;
         position: absolute;
         right: 0;
         top: 50%;
